MDEXP-878 - ECS: Downloading shared instances from member tenants (#598)